# si-message-board

./: Cargo.toml  Readme.md
chat-frontend/: package-lock.json  package.json
chat-frontend/src/: App.tsx  config.ts  index.css
chat-frontend/src/Components/: ChatWindow.tsx  Message.tsx
src/: error.rs  main.rs  model.rs
src/web/: mod.rs  routes_message.rs
tests/: quick_dev.rs
