[package]
name = "si-message-board"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.2", features = ["fs"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
